syntax = "proto3";

package se.mantra.api.admin;
option go_package = "github.com/daedaluz/mantra-cli/lib/grpc/admin";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "common/common.proto";


message CreateDomainRequest {
  string domain = 1;
  string name = 2;
  string description = 3;
  repeated int64 algorithms = 4;
  string registration_path = 5;
  string sign_path = 6;
  bool require_device_binding = 7;
  int32 token_max_age = 8;
}

message CreateDomainResponse {
  string client_id = 5;
  string secret = 6;
}

message DeleteDomainRequest {
  string domain = 1;
}

message Domain {
  string domain = 1;
  string name = 2;
  string description = 3;
  repeated int64 algorithms = 4;
  google.protobuf.Timestamp created_at = 5;
  string registration_path = 6;
  string sign_path = 7;
  bool require_device_binding = 8;
  int32 token_max_age = 9;
}

message ListDomainsRequest {
  // Optional filter: if provided, only return domains matching these names
  repeated string domains = 1;
}

message ListDomainsResponse {
  repeated Domain domains = 1;
}

message GetDomainRequest {
  string domain = 1;
}

message UpdateDomainRequest {
  string domain = 1;
  string name = 2;
  string description = 3;
  repeated int64 algorithms = 4;
  string registration_path = 5;
  string sign_path = 6;
  bool require_device_binding = 7;
  int32 token_max_age = 8;
}

message ListAdminClientsRequest {
  string domain = 1;
}

message ListAdminClientsResponse {
  repeated common.ClientMeta clients = 1;
}

message AuditUserRequest {
  string                    domain  = 1;
  string                    user_id = 2;
  google.protobuf.Timestamp from    = 3;
  google.protobuf.Timestamp to      = 4;
}

message AuditChallengeRequest {
  string domain       = 1;
  string challenge_id = 2;
}

message AuditKeyInfo {
  bytes  key_id    = 1;
  int64  algorithm = 2;
  bool   revoked   = 3;
  string name      = 4;
}

message AuditDeviceInfo {
  string device_id = 1;
  string name      = 2;
}

message AuditClientInfo {
  string client_id = 1;
  string name      = 2;
  bool   admin     = 3;
}

message AuditEntry {
  string                    challenge_id        = 1;
  string                    title               = 2;
  string                    message             = 3;
  common.Status             status              = 4;
  google.protobuf.Timestamp created_at          = 5;
  google.protobuf.Timestamp signed_at           = 6;
  AuditKeyInfo              key                 = 7;
  AuditClientInfo           client              = 8;
  AuditDeviceInfo           device              = 9;
  bool                      verified            = 10;
  common.Location           signature_location  = 11;
  bytes                     authenticator_data  = 12;
  bytes                     client_data_json    = 13;
  bytes                     signature           = 14;
  google.protobuf.Timestamp expires_at          = 15;
  common.Location           challenge_location  = 16;
  bool                      location_required   = 17;
  google.protobuf.DoubleValue distance_meters    = 18;
}

message AuditUserResponse {
  repeated AuditEntry entries = 1;
}

service PlatformAdminService {
  rpc CreateDomain(CreateDomainRequest) returns (CreateDomainResponse);
  rpc DeleteDomain(DeleteDomainRequest) returns (google.protobuf.Empty);
  rpc ListDomains(ListDomainsRequest) returns (ListDomainsResponse);
  rpc GetDomain(GetDomainRequest) returns (Domain);
  rpc UpdateDomain(UpdateDomainRequest) returns (Domain);
  rpc ListAdminClients(ListAdminClientsRequest) returns (ListAdminClientsResponse);
  rpc AuditUser(AuditUserRequest) returns (AuditUserResponse);
  rpc AuditChallenge(AuditChallengeRequest) returns (AuditEntry);
}
